Updates from Overleaf

--- a/Manuscript/Data_Repository/Data_Repository.tex
+++ b/Manuscript/Data_Repository/Data_Repository.tex
@@ -70,6 +70,9 @@
 {\Large \textbf{Data Repository for ``GEOCLIM Modern''}}
 \\
 Yuem Park\textsuperscript{1},
+Nicholas L. Swanson-Hysell\textsuperscript{1},
+Pierre Maffre\textsuperscript{2},
+Yves Godd\'eris\textsuperscript{2}
 \\
 \bigskip
 \textsuperscript{1} Department of Earth and Planetary Science, University of California, Berkeley, CA, USA
@@ -82,11 +85,25 @@ Yuem Park\textsuperscript{1},
 
 This document accompanies the discussion contained in the main text. All the Python code used for this study, as well as the associated data tables not included in this document, can be found at: \url{https://github.com/Swanson-Hysell-Group/XXX}.
 
-\clearpage
+\section*{GEOCLIM}
 
-\section*{XXX}
+\begin{equation}
+    \frac{dh}{dt} = P - E
+\end{equation}
 
-XXX
+\begin{equation}
+    P = P_{0}f(h)
+\end{equation}
+
+\begin{equation}
+    \frac{dh}{dt} = P_{0}f(h) - E
+\end{equation}
+
+\begin{equation}
+    \frac{\delta x}{\delta t} = P_{0}f(h) - E
+\end{equation}
+
+equation \ref{eq:test}
 
 \clearpage
 
