--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -68,6 +68,7 @@
 Yuem Park\textsuperscript{1},
 Nicholas L. Swanson-Hysell\textsuperscript{1},
 Pierre Maffre\textsuperscript{2},
+Francis Macdonald\textsuperscript{3},
 Yves Godd\'eris\textsuperscript{2}
 
 \bigskip
@@ -87,6 +88,10 @@ Yves Godd\'eris\textsuperscript{2}
 XXX
 
 \section*{INTRODUCTION \label{sec:INTRODUCTION}}
+
+The broader Indonesia archipelago has an out-sized influence on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \citep{Hartmann2009a,Hartmann2014a}. There has been significant growth of land area within the region since the Miocene associated with ongoing arc-continent collision between the Sunda-Banda arc system \citep{Molnar2015a}.
+
+Given that the region is a modern-day hotspot of chemical weathering and \COtwo consumption, what effect has this growth had on Earth's climate state and what would \pCOtwo on Earth be if the region wasn't there at all? Assessing the effect of the growth of the Indonesia region on Earth's \pCOtwo levels can not be determined simply through assessing the present-day chemical weathering fluxes. As \COtwo sinks are removed and \COtwo rises, increases in temperature and runoff cause other weathering sinks to increase. The steady-state \COtwo of Earth is set by the pCO$_2$ level at which the sinks of \COtwo are equal to the sources. Based on paleogeographic reconstructions of arc-continent collisions through Earth history, \citet{Macdonald2019a} proposed that arc-continent collisions in the tropics are responsible for increasing planetary weatherability, lowering \pCOtwo and ind
 
 Over geologic time-scales, \COtwo enters Earth's ocean/atmosphere system primarily via volcanism and metamorphic degassing of the solid Earth, and leaves it primarily through the chemical weathering of silicate rocks, which delivers alkalinity and cations to the ocean that ultimately result in the consumption of carbon via the precipitation of carbonate rocks \citep{Kump2000a}. Imbalances between the magnitude of these source and sink fluxes will cause \pCOtwo to change until the silicate weathering negative feedback (in which elevated \pCOtwo leads to higher temperatures and a more intense hydrological cycle that enhances chemical weathering of silicate rocks and therefore the consumption of \COtwo, and vice versa) stabilizes \pCOtwo at a new steady state value \citep{Walker1981a}. One way to perturb steady state \pCOtwo is to change global weatherability - the sum of factors other than climate that contribute to the chemical weathering of rocks and associated \COtwo consumption, such as lithology \citep{Gaillardet1999a, Dessert2003a}, topography \citep{Maher2014a, Maffre2018a}, and paleolatitude \citep{Swanson-Hysell2017a}. \COtwo input from the solid Earth, assuming that it remains constant, can be removed via silicate weathering at a lower \pCOtwo on a planet with relatively high weatherability than on a planet where it is lower \citep{Kump1997a}.
 
@@ -147,9 +152,8 @@ XXX
 \bibliography{References}
 
 \section{Supplemental Materials}
-Experimental determinations of the activation energy (E$_a$) associated with the weathering of silicate minerals are variable \citep{Brantley2003a}. However, multiple efforts to invert for E$_a$ in basaltic watersheds with varying temperature have yielded values (41.6$\pm$3.2 kJ/mol in \citealp{Li2016a}; 42.3 kJ/mol in \citealp{Dessert2001a}) that are consistent with the lower end of activation energies of Ca+Mg bearing minerals in laboratory experiments such as that for diopside (41.8 kJ/mol; \citealp{Knauss1993a}) and for labradorite (42 kJ/mol; \citealp{Carroll2005a}. We use the values of 42 kJ/mol in our model runs.
 
-%note that these values are for 25ºC To
+Experimental determinations of the activation energy (E$_a$) associated with the weathering of silicate minerals are variable \citep{Brantley2003a}. However, multiple efforts to invert for E$_a$ in basaltic watersheds with varying temperature have yielded values (41.6$\pm$3.2 kJ/mol in \citealp{Li2016a}; 42.3 kJ/mol in \citealp{Dessert2001a}) that are consistent with the lower end of activation energies of Ca+Mg bearing minerals in laboratory experiments such as that for diopside (40.5$\pm$1.7 kJ/mol; \citealp{Knauss1993a}) and for labradorite (42.1 kJ/mol; \citealp{Carroll2005a}. We use the values of 42 kJ/mol in our model runs.
 
 % http://dx.doi.org/10.1016/B0-08-043751-6/05075-1 Brantley2003a
 % https://doi.org/10.1016/0016-7037(93)90431-U Knauss1993a
